--- a/apartment1.ui
+++ b/apartment1.ui
@@ -99,7 +99,7 @@
   </action>
   <action name="apar_save">
    <property name="text">
-    <string>保存为</string>
+    <string>保存</string>
    </property>
    <property name="toolTip">
     <string>保存到文件中</string>
@@ -253,5 +253,3 @@
  <resources/>
  <connections/>
 </ui>
-
-
