--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,31 +6,41 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>552</width>
+    <height>390</height>
    </rect>
   </property>
   <property name="font">
    <font>
-    <pointsize>13</pointsize>
+    <pointsize>10</pointsize>
    </font>
   </property>
   <property name="windowTitle">
    <string>房主界面</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>50</y>
-      <width>551</width>
-      <height>361</height>
+      <x>30</x>
+      <y>20</y>
+      <width>471</width>
+      <height>291</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>11</pointsize>
+     </font>
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <item row="1" column="0">
       <widget class="QPushButton" name="pushButton_2">
+       <property name="font">
+        <font>
+         <pointsize>11</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>浏览公寓</string>
        </property>
@@ -38,6 +48,11 @@
      </item>
      <item row="0" column="1">
       <widget class="QPushButton" name="pushButton_4">
+       <property name="font">
+        <font>
+         <pointsize>11</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>租赁管理</string>
        </property>
@@ -45,6 +60,11 @@
      </item>
      <item row="1" column="1">
       <widget class="QPushButton" name="pushButton_5">
+       <property name="font">
+        <font>
+         <pointsize>11</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>个人信息</string>
        </property>
@@ -54,7 +74,7 @@
       <widget class="QPushButton" name="pushButton">
        <property name="font">
         <font>
-         <pointsize>13</pointsize>
+         <pointsize>11</pointsize>
         </font>
        </property>
        <property name="text">
@@ -70,7 +90,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>552</width>
      <height>22</height>
     </rect>
    </property>
