--- a/information.ui
+++ b/information.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>288</width>
-    <height>132</height>
+    <width>300</width>
+    <height>160</height>
    </rect>
   </property>
   <property name="font">
@@ -16,7 +16,39 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>个人信息</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">
+    QMainWindow {
+        background-color: #f0f0f0;
+    }
+    QPushButton {
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        padding: 5px 10px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 12px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 5px;
+    }
+    QPushButton:hover {
+        background-color: #45a049;
+    }
+    QLabel {
+        color: #333333;
+        font-size: 12px;
+    }
+    QLineEdit {
+        border: 1px solid #ccc;
+        padding: 5px;
+        border-radius: 5px;
+        font-size: 12px;
+    }
+   </string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QWidget" name="layoutWidget">
@@ -24,11 +56,17 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>259</width>
-      <height>103</height>
+      <width>280</width>
+      <height>140</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_3">
+     <property name="spacing">
+      <number>10</number>
+     </property>
+     <property name="margin">
+      <number>10</number>
+     </property>
      <item row="1" column="0">
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="0" column="1">
