--- a/userui.ui
+++ b/userui.ui
@@ -54,13 +54,13 @@
     <property name="spacing">
      <number>20</number>
     </property>
-    <property name="padding">
+    <property name="padding" stdset="0">
      <number>20</number>
     </property>
     <item>
      <widget class="QPushButton" name="pushButton">
       <property name="text">
-       <string>浏览公寓</string>
+       <string>租赁公寓</string>
       </property>
      </widget>
     </item>
